<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.ListProductActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/includeDetailHeader"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"

      >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">


            <TextView
                android:id="@+id/tvListProductTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginVertical="10dp"
                android:text="@string/sanpham"
                android:textSize="30dp"
                android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        >
        <EditText

            android:id="@+id/edtProductListSearch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/search_sp"
            android:hint="@string/seach"
            android:padding="5dp"
            android:drawableStart="@drawable/baseline_search_24"
            android:drawablePadding="5dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvlistProductCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hủy"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/baseline_local_pizza_24"
                android:paddingHorizontal="15dp"
                android:layout_marginVertical="10dp"
                android:text="@string/tatcaloaisanpham"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvListProductQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E4E1E1"
                android:paddingHorizontal="15dp"
                android:text="Số lượng sản phẩm"
                android:textSize="16dp" />

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/srlListProduct"
                android:layout_width="match_parent"
                android:layout_height="510dp"
                android:layout_weight="1">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rclvListProductListproduct"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </LinearLayout>

    </ScrollView>

    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        android:layout_margin="15dp"-->
    <!--        android:src="@drawable/baseline_add_24"-->
    <!--        app:maxImageSize="40dp"-->

    <!--        />-->
</androidx.constraintlayout.widget.ConstraintLayout>