<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#EDEDED"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:id="@+id/ctlProductAddOrder"

                >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="300dp"
                    android:layout_height="160dp"
                    android:background="@drawable/botron_themsp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/baseline_add_24"
                    android:backgroundTint="#379FF1"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintHorizontal_bias="0.495"
                    android:clickable="false"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toTopOf="@+id/textView"
                    android:importantForAccessibility="no" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Thêm giỏ hàng"
                    android:textSize="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/fab"
                    android:textStyle="bold"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="5dp"
                android:background="@drawable/backround_linner"
                >

                <TextView
                    android:id="@+id/tvProductListProduct"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/danhsachsanpham"
                    android:gravity="center_vertical"
                    android:textSize="20dp"
                    android:layout_gravity="center_vertical"
                    android:drawableLeft="@drawable/baseline_format_list_bulleted_24"
                    android:padding="10dp"
                    android:drawableRight="@drawable/baseline_arrow_forward_ios_24"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="5dp"
                android:background="@drawable/backround_linner"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/nhaphang"
                    android:gravity="center_vertical"
                    android:textSize="20dp"
                    android:layout_gravity="center_vertical"
                    android:drawableLeft="@drawable/baseline_menu_book_24"
                    android:padding="10dp"
                    android:drawableRight="@drawable/baseline_arrow_forward_ios_24"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="5dp"
                android:background="@drawable/backround_linner"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/kiemhang"
                    android:gravity="center_vertical"
                    android:textSize="20dp"
                    android:layout_gravity="center_vertical"
                    android:drawableLeft="@drawable/baseline_dialpad_24"
                    android:padding="10dp"
                    android:drawableRight="@drawable/baseline_arrow_forward_ios_24"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="5dp"
                android:background="@drawable/backround_linner"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/nhacungcap"
                    android:gravity="center_vertical"
                    android:textSize="20dp"
                    android:layout_gravity="center_vertical"
                    android:drawableLeft="@drawable/baseline_dialpad_24"
                    android:padding="10dp"
                    android:drawableRight="@drawable/baseline_arrow_forward_ios_24"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="5dp"
                android:background="@drawable/backround_linner"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/intemmavach"
                    android:gravity="center_vertical"
                    android:textSize="20dp"
                    android:layout_gravity="center_vertical"
                    android:drawableLeft="@drawable/baseline_dialpad_24"
                    android:padding="10dp"
                    android:drawableRight="@drawable/baseline_arrow_forward_ios_24"
                    />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</FrameLayout>